IF and ELIF STATEMENTS

--- a/Python Theory/Theory class 1.ipynb
+++ b/Python Theory/Theory class 1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +59,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to check if the number is even or odd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THe number entered is - -2\n",
+      "EVEN\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = eval(input(\"Enter the number\"))\n",
+    "print(\"THe number entered is -\",a)\n",
+    "if a % 2 == 0 :\n",
+    "    print(\"EVEN\")\n",
+    "else :\n",
+    "    print(\"ODD\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IF ELIF STATEMENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if condition :\n",
+    "#     print(\"STatement\")\n",
+    "# elif  condition :\n",
+    "#     print(\"Statement\")\n",
+    "# else :\n",
+    "#     print(\"Statement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if condition :\n",
+    "#     print(\"STatement\")\n",
+    "\n",
+    "# elif  condition :\n",
+    "#     print(\"Statement\")\n",
+    "# else :\n",
+    "#     print(\"Statement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Number is -  4\n",
+      "Second Number is -  5\n",
+      "Third Number is -  99\n",
+      "c is greater\n",
+      "End of program\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = eval(input(\"Enter the first number - \"))\n",
+    "b = eval(input(\"Enter the second number - \"))\n",
+    "c = eval(input(\"Enter the third number - \"))\n",
+    "print(\"First Number is - \",a)\n",
+    "print(\"Second Number is - \",b)\n",
+    "print(\"Third Number is - \",c)\n",
+    "if a>b :\n",
+    "    print(\"a is greater\")\n",
+    "elif b > c :\n",
+    "    print(\"b is greater\")\n",
+    "elif c > a :\n",
+    "    print(\"c is greater\")\n",
+    "else :\n",
+    "    print(\"END....\")\n",
+    "print(\"End of program\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
