--- a/Lab - 01.ipynb
+++ b/Lab - 01.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "Mysel Chirag N\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "print(\"Mysel Chirag N\")"
    ]
   },
   {
@@ -22,40 +22,14 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def fib(n) : \n",
-    "    a,b = 0,1\n",
-    "    for i in range(10) :\n",
-    "        yield a\n",
-    "        a,b = b,b+a"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in fib(10) :\n",
-    "    print(i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
