This is my 2nd Lab

--- a/Python Theory/Theory Classs 3.ipynb
+++ b/Python Theory/Theory Classs 3.ipynb
@@ -311,6 +311,285 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"Chirag\",\"Josh\",\"Anushya\",\"Tulip\"]\n",
+    "def names(a) :\n",
+    "    list_of_names = str(input[\"\"])\n",
+    "    if list_of_names == names :\n",
+    "        print(\"The name already exists\")\n",
+    "    else :\n",
+    "        print(list_of_names)\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Chirag\",\"Josh\",\"Anushya\",\"Tulip\"]\n",
+    "list_of_names = []\n",
+    "if list_of_names == names :\n",
+    "    print(\"The name already exists\")\n",
+    "else :\n",
+    "    print(list_of_names.append(str(input())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_list = []\n",
+    "def names_list(n):\n",
+    "    \n",
+    "    if names_list == \"q\" :\n",
+    "        print(\"the process is ended\",names_list)\n",
+    "    elif names_list ==\"\":\n",
+    "        print(\"The name already exists\",name)\n",
+    "    else :\n",
+    "        name.append(n)\n",
+    "        print(\"Name added\",name)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name added ['q', 'q', 'q']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list(\"q\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name added ['Chirag', 'Josh']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list(\"Josh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name added ['Chirag', 'Josh', 'Josh']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list(\"Josh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name added ['Chirag', 'Josh', 'Tulip', 'Anushya']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list(\"Anushya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name added ['Chirag', 'Josh', 'Tulip', 'Anushya', 'Anushya']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list(\"Anushya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = []\n",
+    "def name_list(n) :\n",
+    "    if n  == \"q\" :\n",
+    "        print(\"Process is ended\",name)\n",
+    "    elif n in name == name :\n",
+    "        print(\"The name already exists\")\n",
+    "    else :\n",
+    "        name.append(n)\n",
+    "        print(\"New name added\",name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process is ended ['Chirag', 'TUlip', 'Britto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"q\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New name added ['Chirag']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"Chirag\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"Chirag\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New name added ['Chirag', 'TUlip']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"TUlip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"Chirag\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New name added ['Chirag', 'TUlip', 'Britto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"Britto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process is ended ['Chirag', 'TUlip', 'Britto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_list(\"q\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
