--- a/LAB WORK/LAB - 02.ipynb
+++ b/LAB WORK/LAB - 02.ipynb
@@ -24,63 +24,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = []\n",
     "def name_list(n) :\n",
-    " \n",
-    "    if n  == \"q\" :\n",
-    "        print(\"Process is ended\",name)\n",
-    "    elif n in name == name :\n",
-    "        print(\"The name already exists\")\n",
-    "    elif type(n) == int :\n",
-    "        print(\"Invalid\")\n",
-    "    elif n in name == alpha:\n",
-    "        print(\"Invalid\")\n",
+    "   for i in name :\n",
+    "    if i == name.isalpha(n) : ## TO check for strings\n",
+    "       continue\n",
     "    else :\n",
+    "       return ## If not a strings the code returns\n",
+    " \n",
+    "    if n  == \"q\" : ## If the user provides q as his/her input then the code terminates and gives \"Process is ended as an output\"\n",
+    "        print(\"Process is ended\",name)\n",
+    "    elif n in name == name : ## If the user provides the same name again then the system prints it as \"The name already exists\"\n",
+    "        print(\"The name already exists\")\n",
+    "    elif type(n) == int : ## If the netered value is an integer by the user then the system prints it as \"Invalid\"\n",
+    "        print(\"Invalid\")\n",
+    "    \n",
+    "    else :    ## The user can add items to the list under this section\n",
     "        name.append(n)\n",
     "        print(\"New name added\",name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invalid\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name_list(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New name added ['JOsh']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name_list(\"JOsh\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +77,7 @@
        "<function __main__.name_list(n)>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +97,7 @@
        "['JOsh']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
