--- a/LAB WORK/Lab - 01.ipynb
+++ b/LAB WORK/Lab - 01.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mysel Chirag N\n"
+      "Myself Chirag N\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mysel Chirag N\")"
+    "print(\"Myself Chirag N\")"
    ]
   },
   {
