--- a/Python Theory/Theory CLass 5.ipynb
+++ b/Python Theory/Theory CLass 5.ipynb
@@ -146,13 +146,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Details are saved..!\n",
+      "******************************\n",
+      "Name\t:\tChirag N\n",
+      "\n",
+      "Phone\t:\t9008407612\n",
+      "\n",
+      "Email\t:\tchirag.n3012@gmail.com\n",
+      "******************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "def writeMyDetails(name, phone, email):\n",
+    "    fileMyDetails = open(name+\".txt\", \"w+\")  # Alwin.txt\n",
+    "    fileMyDetails.write(\"Name\\t:\\t\"+name)\n",
+    "    fileMyDetails.write(\"\\nPhone\\t:\\t\"+phone)\n",
+    "    fileMyDetails.write(\"\\nEmail\\t:\\t\"+email)\n",
+    "    fileMyDetails.close()\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "name = input(\"Enter your Name: \")\n",
+    "phone = input(\"Enter your Phone Number: \")\n",
+    "email = input(\"Enter your Email: \")\n",
+    "ret = writeMyDetails(name, phone, email)\n",
+    "if ret:\n",
+    "    print(\"Your Details are saved..!\")\n",
+    "    print(\"*\"*30)\n",
+    "    # for line in open(name+\".txt\", \"r+\").readlines():\n",
+    "    #     print(line)\n",
+    "    file = open(name+\".txt\", \"r+\")\n",
+    "    file_lines = file.readlines()\n",
+    "    for line in file_lines:\n",
+    "        print(line)\n",
+    "    print(\"*\"*30)\n",
+    "else:\n",
+    "    print(\"Some error occured..!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def writemydetails() :\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
