--- a/LAB WORK/LAB - 04.ipynb
+++ b/LAB WORK/LAB - 04.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,7 @@
       "1) Rice\t\tRs.30\n",
       "2) Chapati\t\tRs.20\n",
       "Choose from the given options\n",
+      "Your order -  Chapati\t\tRs.20\n",
       "Choose your payment method\n",
       "1) Cash\t\t2) Online Payment\n",
       "Payment method: Cash\n",
@@ -198,16 +199,12 @@
     "    order.write(\"Feedback: \" + feedback + \"\\n\")\n",
     "    order.close()\n",
     "    return True\n",
-    "\n",
     "HotelName = \"Culinary Delights\"\n",
     "menu = \"Menu for the day is:\\n1) Rice\\t\\tRs.30\\n2) Chapati\\t\\tRs.20\"\n",
-    "\n",
     "print(f\"Welcome to {HotelName}\")\n",
     "print(menu)\n",
-    "\n",
     "print(\"Choose from the given options\")\n",
     "option = int(input(\"Enter your choice (1 or 2): \"))\n",
-    "\n",
     "if option == 1:\n",
     "    display = \"Rice\\t\\tRs.30\"\n",
     "elif option == 2:\n",
@@ -215,11 +212,10 @@
     "else:\n",
     "    print(\"Error: Invalid choice\")\n",
     "    display = \"Invalid Choice\"\n",
-    "\n",
+    "print(\"Your order - \",display)\n",
     "print(\"Choose your payment method\")\n",
     "print(\"1) Cash\\t\\t2) Online Payment\")\n",
     "payment = int(input(\"Enter mode of payment (1 or 2): \"))\n",
-    "\n",
     "if payment == 1:\n",
     "    payment_method = \"Cash\"\n",
     "elif payment == 2:\n",
@@ -227,13 +223,9 @@
     "else:\n",
     "    print(\"Error: Invalid payment method\")\n",
     "    payment_method = \"Invalid Payment Method\"\n",
-    "\n",
     "print(f\"Payment method: {payment_method}\")\n",
-    "\n",
     "feedback = input(\"Enter your feedback: \")\n",
-    "\n",
     "ret = orders(HotelName, menu, option, display, payment_method, feedback)\n",
-    "\n",
     "if ret:\n",
     "    print(\"Thank you for dining with us\")\n",
     "    print(\"*\" * 50)\n",
