--- a/LAB WORK/LAB - 04.ipynb
+++ b/LAB WORK/LAB - 04.ipynb
@@ -164,19 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------------------------------------\n",
       "Welcome to Culinary Delights\n",
       "Menu for the day is:\n",
       "1) Rice\t\tRs.30\n",
       "2) Chapati\t\tRs.20\n",
       "Choose from the given options\n",
-      "Your order -  Chapati\t\tRs.20\n",
+      "Your order -  Rice\t\t\tRs.30\n",
       "Choose your payment method\n",
       "1) Cash\t\t2) Online Payment\n",
       "Payment method: Cash\n",
@@ -186,9 +187,9 @@
     }
    ],
    "source": [
-    "def orders(HotelName, menu, option, display, payment, feedback):\n",
+    "def orders(menu, option, display, payment, feedback):\n",
     "    order = open(\"CulinaryDelightsOrder.txt\", \"w+\")\n",
-    "    order.write(f\"Welcome to {HotelName}'s RMS\\n\")\n",
+    "    order.write(\"Welcome to Culinary Delights's RMS\\n\")\n",
     "    order.write(\"What do you wanna eat\\n\")\n",
     "    order.write(\"Menu for the day is:\\n\")\n",
     "    order.write(menu + \"\\n\")\n",
@@ -200,13 +201,14 @@
     "    order.close()\n",
     "    return True\n",
     "HotelName = \"Culinary Delights\"\n",
+    "print(\"-\"*50)\n",
     "menu = \"Menu for the day is:\\n1) Rice\\t\\tRs.30\\n2) Chapati\\t\\tRs.20\"\n",
-    "print(f\"Welcome to {HotelName}\")\n",
+    "print(\"Welcome to Culinary Delights\")\n",
     "print(menu)\n",
     "print(\"Choose from the given options\")\n",
     "option = int(input(\"Enter your choice (1 or 2): \"))\n",
     "if option == 1:\n",
-    "    display = \"Rice\\t\\tRs.30\"\n",
+    "    display = \"Rice\\t\\t\\tRs.30\"\n",
     "elif option == 2:\n",
     "    display = \"Chapati\\t\\tRs.20\"\n",
     "else:\n",
@@ -225,7 +227,7 @@
     "    payment_method = \"Invalid Payment Method\"\n",
     "print(f\"Payment method: {payment_method}\")\n",
     "feedback = input(\"Enter your feedback: \")\n",
-    "ret = orders(HotelName, menu, option, display, payment_method, feedback)\n",
+    "ret = orders(menu, option, display, payment_method, feedback)\n",
     "if ret:\n",
     "    print(\"Thank you for dining with us\")\n",
     "    print(\"*\" * 50)\n",
