--- a/LAB WORK/LAB - 04.ipynb
+++ b/LAB WORK/LAB - 04.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
       "Your order -  Rice\t\t\tRs.30\n",
       "Choose your payment method\n",
       "1) Cash\t\t2) Online Payment\n",
-      "Payment method: Cash\n",
+      "Payment method: Online Payment\n",
       "Thank you for dining with us\n",
       "**************************************************\n"
      ]
@@ -207,13 +207,15 @@
     "print(menu)\n",
     "print(\"Choose from the given options\")\n",
     "option = int(input(\"Enter your choice (1 or 2): \"))\n",
-    "if option == 1:\n",
-    "    display = \"Rice\\t\\t\\tRs.30\"\n",
-    "elif option == 2:\n",
-    "    display = \"Chapati\\t\\tRs.20\"\n",
-    "else:\n",
-    "    print(\"Error: Invalid choice\")\n",
-    "    display = \"Invalid Choice\"\n",
+    "for i in menu :\n",
+    "\n",
+    "    if option == 1:\n",
+    "        display = \"Rice\\t\\t\\tRs.30\"\n",
+    "    elif option == 2:\n",
+    "        display = \"Chapati\\t\\tRs.20\"\n",
+    "    else:\n",
+    "        print(\"Error: Invalid choice\")\n",
+    "        display = \"Invalid Choice\"\n",
     "print(\"Your order - \",display)\n",
     "print(\"Choose your payment method\")\n",
     "print(\"1) Cash\\t\\t2) Online Payment\")\n",
@@ -240,7 +242,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def hotel(menu,Confirmenu,option,display,total,payment,feedback):\n",
+    "    file = hotel.open(\"Culinary Delights's.txt\",\"w+\")\n",
+    "    file.write(\"Welcome to Culinary Delight's RMS\\n\")\n",
+    "    file.write(\"Menu for the day is\\n\")\n",
+    "    file.write(+menu +\"\\n\")\n",
+    "    file.write(\"Enter your choice : \",+option +\"\\n\")\n",
+    "    file.write(\"You ordered\",+display+\"\\n\")\n",
+    "    file.write(\"Your total is\",+total+\"\\n\")\n",
+    "    file.write(\"Choose your payment method\",+payment,+\"\\n\")\n",
+    "    file.write(\"Payment successful\\n\")\n",
+    "    file.write(\"Feedback\",+feedback+\"\\n\")\n",
+    "    file.close()\n",
+    "return True\n"
+   ]
   }
  ],
  "metadata": {
